# udemy-build-your-own-2d-game-engine-in-c20-with-sfml-3

./: .clang-format  .editorconfig  .gitignore  README.md
.nvim/: cmake.lua  dap.lua
.templates/sfml-project/: CMakeLists.txt
.templates/sfml-project/cmake/: DevTools.cmake
.templates/sfml-project/src/: main.cpp
projects/0-starter/: CMakeLists.txt
projects/0-starter/src/: main.cpp
projects/1-window/: CMakeLists.txt
projects/1-window/src/: main.cpp
projects/10-arcade-engine/: .gitignore  CMakeLists.txt
projects/10-arcade-engine/assets/: Config.json
projects/10-arcade-engine/src/: main.cpp
projects/10-arcade-engine/src/Engine/Core/: Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineContext.cpp  EngineContext.h  EngineVisitor.cpp  EngineVisitor.h
projects/10-arcade-engine/src/Engine/Manager/: ClipboardManager.cpp  ClipboardManager.h  RandomManager.cpp  RandomManager.h  SaveManager.cpp  SaveManager.h  TimeManager.cpp  TimeManager.h
projects/10-arcade-engine/src/Engine/Utils/: Log.h
projects/2-events/: CMakeLists.txt
projects/2-events/src/: main.cpp
projects/3-application/: CMakeLists.txt  CMakePresets.json
projects/3-application/src/: Application.cpp  Application.h
projects/4-shapes/: CMakeLists.txt
projects/4-shapes/src/: Application.cpp  Application.h
projects/5-textures/: CMakeLists.txt
projects/5-textures/src/: Application.cpp  Application.h
projects/6-inputs/: CMakeLists.txt
projects/6-inputs/src/: Application.cpp  Application.h  README.md  main.cpp
projects/7-transformations/: CMakeLists.txt  backups
projects/7-transformations/src/: Application.cpp  Application.h  README.md
projects/8-time/: CMakeLists.txt  backups
projects/8-time/src/: Application.cpp  Application.h
projects/9-bounce-game/: CMakeLists.txt
projects/9-bounce-game/src/: Background.cpp  Background.h  Ball.cpp  Ball.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameSounds.cpp  GameSounds.h  GameStats.cpp  GameStats.h  Paddle.cpp  Paddle.h  README.md  Random.cpp  Random.h  main.cpp
tools/: workspace.py
